Add ipad1 and ipad3

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,6 +1,12 @@
 Host i4
   HostName i4
   User root
+Host p1
+  HostName p1
+  User root
 Host p2
   HostName p2
+  User root
+Host ipad3
+  HostName ipad3
   User root
