for all iDevices

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,24 +1,2 @@
-Host 3gs
-  HostName 3gs
-  User root
-Host i4
-  HostName i4
-  User root
-Host i4s
-  HostName i4s
-  User root
-Host i5
-  HostName i5
-  User root
-Host i5s
-  HostName i5s
-  User root
-Host ipad1
-  HostName ipad1
-  User root
-Host ipad2
-  HostName ipad2
-  User root
-Host ipad3
-  HostName ipad3
+Host i* ipad* mini*
   User root
