Add 2.9.7 new `disable_autofocus` option.

--- a/.Vromerc
+++ b/.Vromerc
@@ -7,6 +7,9 @@ set hintkeys=jlkhfsdagweroi
 " Don't follow new tab
 set follow_new_tab=0
 
+" Don't autofocus when loaded
+set disable_autofocus=1
+
 " long feet scroll
 map j 5j
 map k 5k
