Add git 2.9 heuristic diff engine option and use diff-highlight script.

--- a/.gitconfig
+++ b/.gitconfig
@@ -18,3 +18,11 @@
 	gpgsign = true
 [gpg]
 	program = gpg2
+[diff]
+    compactionHeuristic = true
+[pager]
+	diff = diff-highlight | less
+	show = diff-highlight | less
+	log = diff-highlight | less
+[interactive]
+	diffFilter = diff-highlight
