Add cacoo.com to disablesites

--- a/.Vromerc
+++ b/.Vromerc
@@ -5,7 +5,7 @@ set useletters=1
 set hintkeys=jlkhfsdagweroi
 
 " Disable Vrome in those sites, Multiple URLs can be separated with ,
-set disablesites=mail.google.com,docs.google.com,inbox.google.com
+set disablesites=mail.google.com,docs.google.com,inbox.google.com,cacoo.com
 
 " Don't follow new tab
 set follow_new_tab=0
