Add pro to ssh host

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,5 +1,5 @@
 Include config_local
-Host i* ipad* mini* air*
+Host i* ipad* mini* air* pro*
   User root
   IdentityFile ~/.ssh/i7_id_rsa
 Host bitbucket.org
