--- a/.gitconfig
+++ b/.gitconfig
@@ -17,7 +17,7 @@
 [commit]
 	gpgsign = true
 [gpg]
-	program = gpg2
+	program = /usr/local/bin/gpg2
 [diff]
     compactionHeuristic = true
 [pager]
