--- a/.gitconfig
+++ b/.gitconfig
@@ -11,9 +11,10 @@
 	co = checkout
 	b = branch
 [filter "lfs"]
-	clean = git-lfs clean %f
-	smudge = git-lfs smudge %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
 	required = true
+	clean = git-lfs clean -- %f
 [commit]
 	gpgsign = true
 [gpg]
