--- a/.theosrc
+++ b/.theosrc
@@ -1,4 +1,4 @@
-export ARCHS=armv7 arm64
+export ARCHS=armv7 arm64 arm64e
 #export STRIP=0
 # PrivateFrameworks tbd files/binaries removed since Xcode 7.3.
 # so download iOS 9.2 sdk from https://jbdevs.org/sdks/ then extract to $(THEOS)/sdks/
