theos: use project preference for ARCHS, SDKVERSION and SYSROOT. Add _THEOS_PLATFORM_DPKG_DEB to packaging by dpkg-deb

--- a/.theosrc
+++ b/.theosrc
@@ -1,8 +1,9 @@
-export ARCHS=armv7 arm64 arm64e
+# export ARCHS=armv7 arm64 arm64e
+export _THEOS_PLATFORM_DPKG_DEB = dpkg-deb
 #export STRIP=0
 # PrivateFrameworks tbd files/binaries removed since Xcode 7.3.
 # so download iOS 9.2 sdk from https://jbdevs.org/sdks/ then extract to $(THEOS)/sdks/
-export SDKVERSION = 9.2
-export SYSROOT = $(THEOS)/sdks/iPhoneOS9.2.sdk
+# export SDKVERSION = 9.2
+# export SYSROOT = $(THEOS)/sdks/iPhoneOS9.2.sdk
 # export SDKVERSION = 10.1
 # export SYSROOT = $(THEOS)/sdks/iPhoneOS10.1.sdk
