tig: Add more vim style key bind

--- a/.tigrc
+++ b/.tigrc
@@ -1,7 +1,10 @@
 # to show affected versions
 bind diff T !git tag -l --contains %(commit)
+bind blame T !git tag -l --contains %(commit)
 
 # vim like key binding
 bind generic <C-F> move-page-down
 bind generic <C-B> move-page-up
 bind blame G move-last-line
+bind blame g none
+bind blame gg move-first-line
