--- a/dein.toml
+++ b/dein.toml
@@ -59,13 +59,7 @@ repo = 'ConradIrwin/vim-bracketed-paste'
 repo = 'r-plus/EnhCommentify.vim'
 
 [[plugins]]
-repo = 'osyo-manga/vim-anzu'
-hook_add = '''
-  nmap n <Plug>(anzu-n-with-echo)
-  nmap N <Plug>(anzu-N-with-echo)
-  nmap * <Plug>(anzu-star-with-echo)
-  nmap # <Plug>(anzu-sharp-with-echo)
-'''
+repo = 'google/vim-searchindex'
 
 [[plugins]]
 repo = 'Shougo/unite.vim'
